Revert "added a javax to Lib. updated gitignore files"
This reverts commit 939d3cee01aff5f79f9976729732aa6d19eb4a79.

--- a/WineCellar/WebContent/templates/css/WineApp.less
+++ b/WineCellar/WebContent/templates/css/WineApp.less
@@ -24,9 +24,7 @@ select {
 }
 
 #wineDetail{
-    position: fixed;
-    left: 655px;
-    top: 30px;
+	float: left;
 	width: 400px;
 	border: 1px solid black;
 	padding: 5px;
