added ajax loader to wineDetals

--- a/WineCellar/WebContent/templates/WineDetail.html
+++ b/WineCellar/WebContent/templates/WineDetail.html
@@ -77,3 +77,4 @@
 <h3>Tastings</h3>
 <ul class="tastingNoteList" ></ul>
 
+<div class="ajaxLoader wineDetail"><img src="/images/gifs/ajax-loader.gif"/></div>
