--- a/WineCellar/WebContent/templates/css/WineDetail.less
+++ b/WineCellar/WebContent/templates/css/WineDetail.less
@@ -11,3 +11,19 @@ img.bottleImg{
 .date{
 	font-weight: bold;
 }
+
+div.wineDetail.ajaxLoader{
+	position:absolute;
+	width: 100%;
+	height: 100%;
+	background: white;
+	display:none;
+	opacity: .8;
+	left: 0;
+	top: 0;
+	text-align: center;
+}
+
+div.wineDetail.ajaxLoader img{
+	margin-top: 50% - 8;
+}
