--- a/WineCellar/WebContent/templates/css/WineSummary.less
+++ b/WineCellar/WebContent/templates/css/WineSummary.less
@@ -14,6 +14,16 @@ img.ui-li-thumb{
 }
 
 a.wineSummary{
+	position: relative;
 	text-decoration: none;
 	color: black;
+}
+
+div.ajaxLoader{
+	position: absolute;
+	left: @summary_width - 16 - 10;
+	top: -@summary_height / 2 - 8;
+	width: 16px;
+	height: 16px;
+	display:none;
 }
