Added forms for creating Purchases and tasting notes

--- a/WineCellar/WebContent/templates/WineDetail.html
+++ b/WineCellar/WebContent/templates/WineDetail.html
@@ -70,6 +70,9 @@
 	Bottles On Hand:&nbsp;<span class="inventory">{{qtyOnHand}}</span>
 </p>
 
+<button class="addTastingNoteBtn">Add Tasting Note</button>
+<button class="addPurchaseBtn">Add Purchase</button>
+
 <br class="clear"/>
 <h3>Purchases</h3>
 <ul class="purchaseList"></ul><hr/>
@@ -77,4 +80,6 @@
 <h3>Tastings</h3>
 <ul class="tastingNoteList" ></ul>
 
+
+<div class="createItemPopup"></div>
 <div class="ajaxLoader wineDetail"><img src="/images/gifs/ajax-loader.gif"/></div>
