--- a/WineCellar/WebContent/templates/css/WineDetail.less
+++ b/WineCellar/WebContent/templates/css/WineDetail.less
@@ -27,3 +27,15 @@ div.wineDetail.ajaxLoader{
 div.wineDetail.ajaxLoader img{
 	margin-top: 50% - 8;
 }
+
+div.createItemPopup{
+	position: absolute;
+	width: 400px;
+	left: 50px;
+	/* margin-left: -50%; */
+	top: 50px;
+	/* margin-top: -50%; */
+	border: 2px solid red;
+	background: white;
+	padding: 10px;
+}
