--- a/WineCellar/WebContent/templates/TastingNoteList.html
+++ b/WineCellar/WebContent/templates/TastingNoteList.html
@@ -1,3 +1,4 @@
+<!-- <script id="t_TastingNoteList" type="text/x-handlebars-template"> -->
 {{#if this}}
 	{{#each this}}
 	<li>
@@ -10,3 +11,4 @@
 {{else}}
 	<p>No tastings yet... grab a corkscrew!</p>
 {{/if}}
+<!-- </script> -->
