--- a/WineCellar/WebContent/templates/WineSummary.html
+++ b/WineCellar/WebContent/templates/WineSummary.html
@@ -1,4 +1,5 @@
 <a href="#wineDetails/{{wineId}}" data-transition="slide" class="wineSummary">	
+
 	<!-- <img src="/getImage?wineId={{wineId}}" class="floatLeft" /> -->
 	<p>
 		<span class='vineyard' data-vineyardId="{{vineyard.vineyardId}}">{{vineyard.vineyard}}</span>
@@ -55,3 +56,4 @@
 	</p>
 	<div class="ajaxLoader"><img src="/images/gifs/ajax-loader.gif"/></div>
 </a>
+<!-- </script> -->
