--- a/WineCellar/WebContent/templates/css/WineApp.less
+++ b/WineCellar/WebContent/templates/css/WineApp.less
@@ -1,37 +1,37 @@
 @import "/templates/css/common.less";
 
-#wineSummaries{
-	width: @summary_width;
-	float: left;
-	margin-left: 10px;
+#wineSummaryList{
+	/* width: @summary_width; */
+	/* float: left; */
+	/* margin-left: 10px; */
 }
 
-#wineSummaries li{
-	padding: 5px;
-	border-bottom: 1px solid gray;
+#wineSummaryList li{
+	/* padding: 5px; */
+	/* border-bottom: 1px solid gray; */
 }
 
-#wineSummaries li:hover{
-	background: lightskyblue;
+#wineSummaryList li:hover{
+	/* background: lightskyblue; */
 }
 
 #components{
-	width: @components_width;
-	float: left;
-	text-align:center
+	/* width: @components_width; */
+	/* float: left; */
+	/* text-align:center */
 }
 
 select {
-	width: 200px;
-	height: 200px;
+	/* width: 200px;
+	height: 200px; */
 }
 
 #wineDetail{
-	position: fixed;
-	left: @components_width + @summary_width + 15;
-	top: 30px;
-	width: 400px;
-	border: 1px solid black;
+	/* position: fixed; */
+	/* left: @components_width + @summary_width + 15; */
+	/* top: 30px;
+	width: 400px; */
+	/* border: 1px solid black; */
 	padding: 5px;
 	margin: 5px;
 	
