--- a/WineCellar/WebContent/templates/css/WineSummary.less
+++ b/WineCellar/WebContent/templates/css/WineSummary.less
@@ -21,8 +21,8 @@ a.wineSummary{
 
 div.ajaxLoader{
 	position: absolute;
-	left: @summary_width - 16 - 10;
-	top: -@summary_height / 2 - 8;
+	/* left: @summary_width - 16 - 10;
+	top: -@summary_height / 2 - 8; */
 	width: 16px;
 	height: 16px;
 	display:none;
