--- a/WineCellar/WebContent/templates/css/common.less
+++ b/WineCellar/WebContent/templates/css/common.less
@@ -5,10 +5,10 @@
 @gray: #6A6A61;
 @typered: #A5071F;
 
-@summary_height: 142px;
+/* @summary_height: 142px;
 @summary_width: 400px;
 @components_width: 200px;
-
+ */
 
 .clear{
 	clear:both;
