--- a/WineCellar/WebContent/templates/select_regions.html
+++ b/WineCellar/WebContent/templates/select_regions.html
@@ -1,3 +1,4 @@
+<!-- <script id="t_select_regions" type="text/x-handlebars-template"> -->
 {{#each this}}
 	<option value={{this.regionId}} data-regionId="this.regionId">
 		{{this.region}}
@@ -6,3 +7,4 @@
 		{{/if}}
 	</option>
 {{/each}}
+<!-- </script> -->
