--- a/WineCellar/WebContent/templates/select_varietals.html
+++ b/WineCellar/WebContent/templates/select_varietals.html
@@ -1,3 +1,5 @@
+<!-- <script id="t_select_varietals" type="text/x-handlebars-template"> -->
 {{#each this}}
 	<option value="{{this.varietalId}}" data-varietalId="{{this.varietalId}}">{{this.varietal}}</option>
 {{/each}}
+<!-- </script> -->
