--- a/WineCellar/WebContent/templates/WineDetail.html
+++ b/WineCellar/WebContent/templates/WineDetail.html
@@ -1,3 +1,4 @@
+<!-- <script id="t_WineDetail" src="/templates/WineDetail.html" type="text/x-handlebars-template"> -->
 <img class="bottleImg" alt="bottle" data-wineId="{{wineId}}" src="/getImage?wineId={{wineId}}" />
 
 <h2>
@@ -83,3 +84,4 @@
 
 <div class="createItemPopup"></div>
 <div class="ajaxLoader wineDetail"><img src="/images/gifs/ajax-loader.gif"/></div>
+<!-- </script> -->
