--- a/WineCellar/WebContent/templates/select_vineyards.html
+++ b/WineCellar/WebContent/templates/select_vineyards.html
@@ -1,3 +1,5 @@
+<!-- <script id="t_select_vineyards" type="text/x-handlebars-template"> -->
 {{#each this}}
 	<option value="{{this.vineyardId}}" data-vineyardId="{{this.vineyardId}}">{{this.vineyard}}</option>
 {{/each}}
+<!-- </script> -->
