added wine detail support

--- a/WineCellar/WebContent/templates/WineSummary.html
+++ b/WineCellar/WebContent/templates/WineSummary.html
@@ -1,4 +1,4 @@
-<a href="#wineDetails/{{wineId}}" data-transition="slide" class="wineSummary">	
+<a href="#wineDetail={{wineId}}" data-transition="slide" class="wineSummary">	
 
 	<!-- <img src="/getImage?wineId={{wineId}}" class="floatLeft" /> -->
 	<p>
