--- a/WineCellar/WebContent/templates/css/WineApp.less
+++ b/WineCellar/WebContent/templates/css/WineApp.less
@@ -32,8 +32,8 @@ select {
 	/* top: 30px;
 	width: 400px; */
 	/* border: 1px solid black; */
-	padding: 5px;
-	margin: 5px;
+	/* padding: 5px;
+	margin: 5px; */
 	
 	h2{
 		font-size: 1.4em;
