--- a/WineCellar/WebContent/templates/css/WineDetail.less
+++ b/WineCellar/WebContent/templates/css/WineDetail.less
@@ -29,13 +29,13 @@ div.wineDetail.ajaxLoader img{
 }
 
 div.createItemPopup{
-	position: absolute;
-	width: 400px;
-	left: 50px;
+	/* position: absolute;
+	width: 400px; */
+	/* left: 50px; */
 	/* margin-left: -50%; */
-	top: 50px;
+	/* top: 50px; */
 	/* margin-top: -50%; */
 	border: 2px solid red;
 	background: white;
-	padding: 10px;
+	/* padding: 10px; */
 }
