--- a/WineCellar/WebContent/templates/css/WineDetail.less
+++ b/WineCellar/WebContent/templates/css/WineDetail.less
@@ -35,7 +35,7 @@ div.createItemPopup{
 	/* margin-left: -50%; */
 	/* top: 50px; */
 	/* margin-top: -50%; */
-	border: 2px solid red;
-	background: white;
+	/* border: 2px solid red;
+	background: white; */
 	/* padding: 10px; */
 }
