--- a/WineCellar/WebContent/templates/formAddPurchase.html
+++ b/WineCellar/WebContent/templates/formAddPurchase.html
@@ -14,5 +14,5 @@ $<input id="formPurchasePrice" type="number"/><br/>
 </datalist>
 
 <br/>
-<button class="formClose">Close</button>
+<a href="#wineDetail" data-rel="back" data-role="button" data-inline="true" class="formClose">Close</a>
 <button class="formSubmit">Submit</button>
