--- a/WineCellar/WebContent/templates/formAddTastingNote.html
+++ b/WineCellar/WebContent/templates/formAddTastingNote.html
@@ -9,5 +9,5 @@
 <input id="formNoteAuthor" class="author" /><br/> 
 
 
-<button class="formClose">Close</button>
+<a href="#wineDetail" data-rel="back" data-role="button" data-inline="true" class="formClose">Close</a>
 <button class="formSubmit">Submit</button>
