removed amazon credential

--- a/WineCellar/WebContent/templates/css/common.less
+++ b/WineCellar/WebContent/templates/css/common.less
@@ -34,3 +34,7 @@
     background-image: -ms-linear-gradient(@origin, rgba(0,0,0,0.0), rgba(0,0,0,@alpha));
     background-image: linear-gradient(@origin, rgba(0,0,0,0.0), rgba(0,0,0,@alpha));
 }
+
+.addPurchaseBtn, .addTastingNoteBtn{
+	width: 12em;
+}
