--- a/WineCellar/WebContent/templates/formAddTastingNote.html
+++ b/WineCellar/WebContent/templates/formAddTastingNote.html
@@ -1,11 +1,10 @@
-
 <div data-role="fieldcontain">
 	<label for="formTastingDate">Date</label>
 	<input id="formTastingDate" name="tastingDate" type="date"/>
-	
+		
 	<label for="formTastingRating">Rating</label>
-	<input id="formTastingRating" name="rating" type="range" value="0" max="10" min="0" step="1" data-highlight="true" />
-	
+	<input id="formTastingRating" name="rating" type="range" value="0" max="10" min="0" step="1" data-highlight="true" class="number"/>
+
 	<label for="formTastingNote">Note</label>
 	<textarea id="formTastingNote" placeholder="Tasting Note" name="review" data-clear-btn="true"></textarea>
 	
@@ -14,6 +13,5 @@
 </div>
 
 
-<a href="#wineDetail" data-rel="back" data-role="button" data-inline="true" class="formClose">Close</a>
-<!-- <a href="#wineDetail" data-rel="back" data-role="back" data-inline="true" class="formSubmit">Submit</a> -->
+<a href="#wineDetail" data-rel="back" data-role="button" class="formClose hidden">Close</a>
 <button class="formSubmit">Submit</button>
